About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181102a:
    * Reworked land to work more efficiently with cleaner code
    * SST map layers now render more nicely with the land and are now less laggy when the sim is running
    * Clicking the map layer text/button in the bottom now rotates through the map layers
    * The data displayed in the map layer button now shows that at the position of the selected storm if one is selected
        > includes indicator for if the data is "@ mouse pointer / finger" or "@ selected storm"
        > if the selected storm is not active at the time viewed in analysis, data for the mouse pointer / finger is displayed
v20181031a:
    + Added sea surface temperature
    + Added sea surface temperature anomaly
    + Added some UI at the bottom for environmental fields and map layers
    * Fixed an accidental two "v"s in the version number
    * Storm strength algorithm now takes SST into account
    * Storms weaken faster upon landfall
    * Steering tweaks
    * "E" now rotates through 3 environmental fields: LLSteering, SSTAnomaly, and SST
v20181030a:
    * Steering is now much less drunk
    * Fujiwhara improvements
v20181028a:
    + Added a "Start" button when the sim loads, which will initialize the sim upon being clicked
        > This is to help make things load faster, but is also for future user-customizable basin UI
    + Added graphical rendering for environmental fields
        > Both plain-value and vector-based fields supported, rendering with colored tiles and arrows respectively
        > Press "E" to rotate through the environmental fields, and back to "none"
        > Currently, steering is the only environmental field, so "E" is more of a toggle for now
    * Optimized the environmental field code for future environmental factors, including adding vector support for current steering
        > Steering may have gotten yet more drunk for now
v20181026b: